force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/OI_Hierarchy_Relationship_History__c.object-meta.xml
<CustomObject>
    <label>OI Hierarchy Relationship History</label>
    <pluralLabel>OI Hierarchy Relationship Histories</pluralLabel>
    <nameField>
        <label>Hierarchy History Name</label>
        <type>AutoNumber</type>
        <displayFormat>HHIST-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Append-only audit trail of hierarchy relationship changes (FR-017) — deliberately denormalized, not Master-Detail to OI_Hierarchy_Relationship__c, so history outlives the specific relationship row it describes (ADR-0022).</description>
</CustomObject>