force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Created</fullName><default>true</default><label>Created</label></value>
            <value><fullName>Moved</fullName><default>false</default><label>Moved</label></value>
            <value><fullName>Deactivated</fullName><default>false</default><label>Deactivated</label></value>
            <value><fullName>Reactivated</fullName><default>false</default><label>Reactivated</label></value>
            <value><fullName>Deleted</fullName><default>false</default><label>Deleted</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>FR-017.</description>
</CustomField>