force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <label>Changed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>OI_Hierarchy_Changes</relationshipName>
    <relationshipLabel>OI Hierarchy Changes</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FR-017. Not marked required — Salesforce only allows SetNull (never Restrict/Cascade) for a Lookup to User, which is incompatible with required=true. OI_HierarchyRelationshipService always populates this via UserInfo.getUserId() at write time regardless.</description>
</CustomField>