force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/fields/Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Changed_Date__c</fullName>
    <label>Changed Date</label>
    <type>DateTime</type>
    <required>true</required>
    <description>FR-017.</description>
</CustomField>