force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/fields/Child_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Api_Name__c</fullName>
    <label>Child Object API Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The record whose parent changed (FR-017).</description>
</CustomField>