force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/fields/Child_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Child_Record_Id__c</fullName>
    <label>Child Record Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>The record whose parent changed (FR-017), paired with Child_Object_Api_Name__c.</description>
</CustomField>