force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/fields/Hierarchy_Definition__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Definition__c</fullName>
    <label>Hierarchy Definition</label>
    <type>Lookup</type>
    <referenceTo>OI_Hierarchy_Definition__c</referenceTo>
    <relationshipName>OI_Hierarchy_Relationship_Histories</relationshipName>
    <relationshipLabel>OI Hierarchy Relationship Histories</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Denormalized reference, not Master-Detail — history must survive independently of its definition (ADR-0022). Restrict (not SetNull, incompatible with required=true): a definition with history cannot be hard-deleted.</description>
</CustomField>