force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/fields/New_Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Parent_Record_Id__c</fullName>
    <label>New Parent Record Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Blank for a Deactivated/Deleted change type (FR-017).</description>
</CustomField>