force-app/main/default/objects/OI_Hierarchy_Relationship_History__c/fields/Previous_Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Parent_Record_Id__c</fullName>
    <label>Previous Parent Record Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Blank for a Created change type (FR-017).</description>
</CustomField>